tests/codegen/fail/enum/derive_duplicated_value_names.rs
use juniper::GraphQLEnum;

#[derive(GraphQLEnum)]
enum Test {
    Test,
    #[graphql(name = "TEST")]
    Test1,
}

fn main() {}
