tests/codegen/fail/enum/derive_duplicated_value_names.stderr
error: GraphQL enum expected all GraphQL enum values to have unique names
 --> fail/enum/derive_duplicated_value_names.rs:5:5
  |
5 | /     Test,
6 | |     #[graphql(name = "TEST")]
7 | |     Test1,
  | |__________^
